Bugfixes und Server Funktionalität erweitert Nicht verwendete Funktionen beseitigt

--- a/microServer.properties
+++ b/microServer.properties
@@ -3,12 +3,8 @@ micro2.server.port.http=8080
 micro2.server.port.https=8443
 micro2.server.context.path=Micro2
 
-micro2.server.data.saveFormat=mysql
-
-micro2.server.file.rootPath=
-
-micro2.server.database.hostname=localhost
+micro2.server.database.hostname=192.168.32.109
 micro2.server.database.port=3306
-micro2.server.database.name=micro2
+micro2.server.database.name=microweb
 micro2.server.database.username=root
 micro2.server.database.password=root
